--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 <section>
     <div class="slider-banner-3">
         <div class="slider-banner-3__item">
-            <img src="assets/images/uploads/pagebanner/header1-banner.jpg" alt="slider3">
+            <img src="assets/images/uploads/pagebanner/munnar.jpg" alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
                     <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
-                    <h1>Alleppey Beach</h1>
+                    <h1>Munnar</h1>
                 </div>
 
             </div>
@@ -98,28 +98,27 @@
         </div>
         <div class="filterable-tour__categories">
             <span data-filter="*" class="active-filter">All</span>
-            <span data-filter=".italy">Hatch Back</span>
-            <span data-filter=".vietnam">Sedan</span>
-            <span data-filter=".greek">Innova</span>
-            <span data-filter=".egypt">Tempo Traveller</span>
+            <span data-filter=".sedan">Sedan</span>
+            <span data-filter=".mpv">MPV</span>
+            <span data-filter=".traveller">Tempo Traveller</span>
         </div>
         <div id="filterable-posts" class="row">
-            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 greek">
+            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 mpv">
                 <a href="tour-item.html" class="trending-tour-item ">
                     <div class="trending-tour-item__sale"></div>
                     <img class="trending-tour-item__thumnail"
-                         src="https://imgd.aeplcdn.com/1056x594/n/cw/ec/51435/innova-crysta-exterior-right-front-three-quarter-3.jpeg?q=75&wm=1"
+                         src="assets/images/uploads/cars/innova-crysta.jpg"
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
-                            Innova
+                            Toyota Innova Crysta
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <span class="trending-tour-item__group-infor__rating"></span>
                                 <div class="trending-tour-item__group-infor__lasting"><img
-                                        src="assets/images/tours/lasting.png" alt="lasting"> 2 Days / 1 Nights
+                                    src="assets/images/tours/lasting.png" alt="lasting"> 1 day / 80 Kms
                                 </div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹26</div>
                             </div>
 
                             <p class="trending-tour-item__group-infor__sale-price">₹2600</p>
@@ -129,34 +128,35 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12  italy">
+            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12  sedan">
                 <a href="tour-item-2.html" class="trending-tour-item ">
-                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/tours/tour2.jpg"
+                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Dzire.jpg"
                          alt="tour1">
-                    <div class="trending-tour-item__info">
+                    <div class="trending-tour-item__info" >
                         <h3 class="trending-tour-item__name">
-                            trekking everest
+                            Swift Dzire
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <span class="trending-tour-item__group-infor__rating--4star"></span>
-                                <div class="trending-tour-item__group-infor__lasting"><img
-                                        src="assets/images/tours/lasting.png" alt="lasting"> 7 Days / 6 Nights
-                                </div>
+                                <div class="trending-tour-item__group-infor__lasting" > 1 day / 80 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting" >Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting" >Bata : ₹500</div>
                             </div>
-                            <span class="trending-tour-item__group-infor__price">₹652</span>
+
+                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
+                            <span class="trending-tour-item__group-infor__price">₹1200</span>
 
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 ">
+            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 sedan">
                 <a href="tour-item-3.html" class="trending-tour-item ">
-                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/tours/tour3.jpg"
+                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Dzire.jpg"
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
-                            Kelingking beach
+                            Toyota Etios
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
@@ -171,13 +171,38 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 greek italy">
+            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 mpv">
                 <a href="tour-item.html" class="trending-tour-item ">
-                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/tours/tour4.jpg"
+                    <div class="trending-tour-item__sale"></div>
+                    <img class="trending-tour-item__thumnail"
+                         src="assets/images/uploads/cars/innova-crysta.jpg"
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
-                            Turkey Encompassed
+                            Toyota Innova
+                        </h3>
+                        <div class="trending-tour-item__group-infor">
+                            <div class="trending-tour-item__group-infor--left">
+                                <span class="trending-tour-item__group-infor__rating"></span>
+                                <div class="trending-tour-item__group-infor__lasting"><img
+                                        src="assets/images/tours/lasting.png" alt="lasting"> 2 Days / 1 Nights
+                                </div>
+                            </div>
+
+                            <p class="trending-tour-item__group-infor__sale-price">₹2200</p>
+                            <span class="trending-tour-item__group-infor__price">₹2000</span>
+
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 traveller">
+                <a href="tour-item.html" class="trending-tour-item ">
+                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Dzire.jpg"
+                         alt="tour1">
+                    <div class="trending-tour-item__info">
+                        <h3 class="trending-tour-item__name">
+                            Traveller 12 seater
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
