--- a/index.html
+++ b/index.html
@@ -225,29 +225,20 @@
                 <!-- tour-infomation__content__time-table -->
                 <div class="tour-infomation__content__time-table">
                     <span>Free Kms</span>
-                    <p>Approximately 7.30PM</p>
-                </div>
-                <div class="tour-infomation__content__time-table">
-                    <span>Driver allowance</span>
-                    <p>Casual, comfortable and light</p>
+                    <p>100Kms</p>
                 </div>
                 <div class="tour-infomation__content__time-table--price">
                     <span>Price Includes</span>
                     <ul class="tour-infomation__content__time-table__price-include">
-                        <li>Accommondatio</li>
-                        <li>Porter & Personal Guide</li>
-                        <li>Insurance</li>
-                        <li>Breakfast</li>
-                        <li>Tranportation / Car</li>
+                        <li>Driver Bata</li>
+                        <li>Driver Bata</li>
                     </ul>
                 </div>
                 <div class="tour-infomation__content__time-table--price">
                     <span>Price Excludes</span>
                     <ul class="tour-infomation__content__time-table__price-exclude">
-                        <li>Flights</li>
-                        <li>Lunch</li>
-                        <li>Typical Souvenir</li>
-                        <li>Sunscreen, toiletries and personal items</li>
+                        <li>Parking fee, Tolls</li>
+                        <li>Permit Charges</li>
                     </ul>
                 </div>
                 <!-- end tour-infomation__content__time-table -->
@@ -506,18 +497,19 @@
     <div class="container">
         <div class="footer-menu">
             <div class="footer-menu__item">
-                <a href="index-4.html#">Tours</a>
-                <a href="index-4.html#">Destinations</a>
+                <a href="index-4.html#">Our Fleet</a>
+                <a href="index-4.html#">Types of Tours</a>
                 <a href="index-4.html#">Contact</a>
             </div>
+<!--
 
             <a href="index-4.html#" class="footer-menu__item"><img class="footer-menu__logo"
                                                                    src="assets/images/logo.png" alt="footerlogo"></a>
+-->
 
             <div class="footer-menu__item">
                 <a href="index-4.html#">about</a>
                 <a href="index-4.html#">testimonials</a>
-                <a href="index-4.html#">faqs</a>
             </div>
         </div>
     </div>
