--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <span class="header-4-upper__contact-area">
                     <a class="header-4-upper__contact" href="index-4.html#">
                         <img src="assets/images/mailcontact.png" alt="mailcontact">
-                        myemail@nomail.com
+                        info@keralatoursandcabs.com
                     </a>
                     <a class="header-4-upper__contact" href="index-4.html#">
                         <img src="assets/images/header4phone.png" alt="phone">
-                        +1234567890
+                        8301088305
                     </a>
                 </span>
             <span class="header-4-upper__social">
@@ -49,11 +49,11 @@
                     <span class="header-4-upper__contact-area-mobile">
                         <a class="header-4-upper__contact" href="index-4.html#">
                             <img src="assets/images/mailcontact.png" alt="mailcontact">
-                            myemail@nomail.com
+                            info@keralatoursandcabs.com
                         </a>
                         <a class="header-4-upper__contact" href="index-4.html#">
                             <img src="assets/images/header4phone.png" alt="phone">
-                            +1234567890
+                            8301088305
                         </a>
                     </span>
             </nav>
@@ -75,7 +75,7 @@
 
                 <div class="slider-banner-3__destination">
                     <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
-                    <h1>Munnar</h1>
+                    <h1>Kerala Tours and Cabs(KTAC)</h1>
                 </div>
 
             </div>
@@ -152,7 +152,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 sedan">
                 <a href="tour-item-3.html" class="trending-tour-item ">
-                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Dzire.jpg"
+                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/etios.png"
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
@@ -175,7 +175,7 @@
                 <a href="tour-item.html" class="trending-tour-item ">
                     <div class="trending-tour-item__sale"></div>
                     <img class="trending-tour-item__thumnail"
-                         src="assets/images/uploads/cars/innova-crysta.jpg"
+                         src="assets/images/uploads/cars/toyota-innova.jpg"
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
@@ -198,7 +198,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 traveller">
                 <a href="tour-item.html" class="trending-tour-item ">
-                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Dzire.jpg"
+                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Traveller.jpeg"
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
@@ -265,11 +265,9 @@
                     </div>
                     <!--end  gallery-syncing-item -->
                     <div class="tour-infomation__content__descript">
-                        <p>Everest Base Camp Trek reveals some of the most breathtaking Lorem ipsum dolor sit amet consectetur,
-                            adipisicing elit. Error veniam aliquid culpa a, dolores laudantium.
-                            <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum porro quas voluptate deleniti ex
-                            assumenda veniam corrupti dolor nesciunt placeat esse, magni voluptatum quasi error. Laboriosam temporibus
-                            nesciunt impedit dolorum.
+                        <p>Kerala Tours and Cabs is a taxi service provided for all those wanted a help with their travel needs when they are coming to kerala.
+                            <br>We offers a great cab services on demand. Provides taxi services to Munnar, Thekkadi, Parambikkulam, alappuzha, Wayanad, Cochin/Kochi, Kumarakom, Kollam, Vagamon, Kozhikkode, Astamudi, Bekal, Guruvayur, Sabarimala, Idukki, Kannur, Kasargod Backwaters, Kavvayi Backwaters, Kizhunna Beach, Kuttanand, Malampuzha, Marari, Munroe Island, Malappuram, Nelliampathy, Palakkad, Ponmudi, Poovar, Thiruvananthampuram, Trissur, Varkkala etc. 
+                            <br>We offers taxi services to all tourist places in Kerala, pilgrimage, trecking, wildlife ayurvedic/medical tourism.
                         </p>
                     </div>
 
@@ -294,10 +292,10 @@
             </div>
         </div>
         <div class="type-of-tour">
-            <a href="index-5.html#" class="type-of-tour__item">
+            <a href="index.html#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-1.png"
                                                           alt="icon5-1"></div>
-                <p>Adventure</p>
+                <p>Kerala Wildlife/Tours</p>
             </a>
             <a href="index-5.html#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-2.png"
@@ -307,17 +305,17 @@
             <a href="index-5.html#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-3.png"
                                                           alt="icon5-3"></div>
-                <p> Skiing </p>
+                <p> pilgrimage </p>
             </a>
             <a href="index-5.html#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-4.png"
                                                           alt="icon5-4"></div>
-                <p>Kayaking</p>
+                <p>Backwaters</p>
             </a>
             <a href="index-5.html#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-5.png"
                                                           alt="icon5-5"></div>
-                <p>Camping</p>
+                <p>Ayurveda/Medical Tourism</p>
             </a>
         </div>
 
@@ -340,8 +338,9 @@
                 <div class="section-tittle__line-under"></div>
                 <p>Popular <span>Tourist Places</span></p>
             </div>
-            <p class="destination-4-2__sub-tittle">Donec egestas nibh id suscipit tincidunt. Fusce diam risus,
-                conque liberto</p>
+            <p class="destination-4-2__sub-tittle">Kerala otherwise known as god's own country due to it's amazing places of attractions like
+                natural beauty, temples, wildlife, scenic landscapes, climate etc. </br>
+                "Once is a life, you should take a break for Kerala" </p>
         </div>
 
 
@@ -350,8 +349,8 @@
                 <div class="destination-4-2__content">
                     <div class="destination-4-2__content__img"><img
                             src="assets/images/uploads/destination/singapore.png" alt="singapore"></div>
-                    <p>Marina, singapore</p>
-                    <div class="destination-4-2__content__text">Aliquam quis ullamcorper neque. Suspendisse potenti.
+                    <p>Guruvayur, Thrissur</p>
+                    <div class="destination-4-2__content__text"> "Abode of lord Krishna Unni kannan(kannaiyyah), this place which called as bhu loka vaikundam. Name literally means, Guru Pavana Puram, Situated in southern part of Thrissur, Kerala"
                     </div>
                     <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
@@ -362,8 +361,9 @@
                 <div class="destination-4-2__content">
                     <div class="destination-4-2__content__img"><img
                             src="assets/images/uploads/destination/effel.png" alt="effel"></div>
-                    <p>Paris, France</p>
-                    <div class="destination-4-2__content__text">Aliquam quis ullamcorper neque. Suspendisse potenti.
+                    <p>Sabarimala</p>
+                    <div class="destination-4-2__content__text"> This name came from Veer Sabari, from threthayuga. Here dwells the kaliyuga varada(HariHara Putra) as dharma sastha, 
+                        a place for all devotees irrespective of religion caste creed.
                     </div>
                     <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
@@ -374,8 +374,10 @@
                 <div class="destination-4-2__content">
                     <div class="destination-4-2__content__img"><img
                             src="assets/images/uploads/destination/japan.png" alt="japan"></div>
-                    <p>Tokyo, japan</p>
-                    <div class="destination-4-2__content__text">Aliquam quis ullamcorper neque. Suspendisse potenti.
+                    <p>Munnar, Idukki</p>
+                    <div class="destination-4-2__content__text">During summer, the cool climate makes this place an amazing destination. Situated 1600m above sea level, 
+                        contains large number of British model cottages due to colonial era influence.
+
                     </div>
                     <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
@@ -386,8 +388,9 @@
                 <div class="destination-4-2__content">
                     <div class="destination-4-2__content__img"><img src="assets/images/uploads/destination/usa.png"
                                                                     alt="usa"></div>
-                    <p>NewYork, USA</p>
-                    <div class="destination-4-2__content__text">Aliquam quis ullamcorper neque. Suspendisse potenti.
+                    <p>Alappuzha Kerala</p>
+                    <div class="destination-4-2__content__text">Serene, moisty and windy climate, in fact fabulous condition for the famous Alappuzha house boat experience. 
+                        Mouth-watering fresh water fish dishes with Kerala spices is a good combination.
                     </div>
                     <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
@@ -399,8 +402,8 @@
                     <div class="destination-4-2__content__img"><img
                             src="assets/images/uploads/destination/japan.png" alt="japan">
                     </div>
-                    <p>Tokyo, japan</p>
-                    <div class="destination-4-2__content__text">Aliquam quis ullamcorper neque. Suspendisse potenti.
+                    <p>Thekkadi, Idukki</p>
+                    <div class="destination-4-2__content__text">Periyar wild life sanctuary situated here, where there is a variety of flora and fauna visible. There are wild elephants, deer, bison.  Trekking, boating and jeep safari is possible for tourists.
                     </div>
                     <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
@@ -425,51 +428,46 @@
                 <div class="section-tittle__line-under"></div>
                 <p>Travel <span>Reviews</span></p>
             </div>
-            <p class="travel-review__sub-tittle">Etiam vitae enim eget urna efficitur commodo sed quis justo Lorem
-                ipsum dolor sit amet.</p>
+            <p class="travel-review__sub-tittle"> "We love hear their suggestions, words of love. See some of them by yourself"</p>
         </div>
         <div id="travel-review-area" class="row">
 
             <a href="blog-single.html" class="travel-review">
-                <div class="travel-review__avatar"><img src="assets/images/uploads/testi/review1.png" alt="review1">
+                <div class="travel-review__avatar"><img src="" alt="review1">
                 </div>
-                <span class="travel-review__name">Hanet Aguilar</span>
-                <span class="travel-review__career">- Marketer -</span>
+                <span class="travel-review__name">Ankur Sharma</span>
+                <span class="travel-review__career">- Accountant -</span>
                 <span class="travel-review__rating"></span>
-                <p class="travel-review__content">Cras eget mattis neque. Nulla tempus tortor elit, vitae pharetr
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, quia doloribus</p>
+                <p class="travel-review__content"> "Support from the team KTAC was excellent, especially support from Jim, who is so tollerant to hear from us and help us with our plans, great advises" </p>
             </a>
 
 
             <a href="blog-single.html" class="travel-review">
-                <div class="travel-review__avatar"><img src="assets/images/uploads/testi/review2.png" alt="review2">
+                <div class="travel-review__avatar"><img src="" alt="review2">
                 </div>
-                <span class="travel-review__name">Beverly West</span>
-                <span class="travel-review__career">- Lawyer -</span>
+                <span class="travel-review__name">Mohan Kumar</span>
+                <span class="travel-review__career">- Photoghrapher -</span>
                 <span class="travel-review__rating--4-star"></span>
-                <p class="travel-review__content">Cras eget mattis neque. Nulla tempus tortor elit, vitae pharetr
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, quia doloribus</p>
+                <p class="travel-review__content"> "maja aya, so cooperative team, helped us in planning our program with time bound schedules, three days was simply amazing"</p>
             </a>
 
             <a href="blog-single.html" class="travel-review">
-                <div class="travel-review__avatar"><img src="assets/images/uploads/testi/review3.png" alt="review3">
+                <div class="travel-review__avatar"><img src="" alt="review3">
                 </div>
-                <span class="travel-review__name">Roger Obrien </span>
-                <span class="travel-review__career">- Founder -</span>
+                <span class="travel-review__name">Manmeet Singh </span>
+                <span class="travel-review__career">- Wild Life Observator -</span>
                 <span class="travel-review__rating"></span>
-                <p class="travel-review__content">Cras eget mattis neque. Nulla tempus tortor elit, vitae pharetr
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, quia doloribus</p>
+                <p class="travel-review__content"> "With the support of KTAC I have able to complete all my project time bound. Their experiance with authorities helped us to make things much simpler, I recommend them"</p>
             </a>
 
 
             <a href="blog-single.html" class="travel-review">
-                <div class="travel-review__avatar"><img src="assets/images/uploads/testi/review2.png" alt="review2">
+                <div class="travel-review__avatar"><img src="" alt="review2">
                 </div>
-                <span class="travel-review__name">Beverly West</span>
-                <span class="travel-review__career">- Lawyer -</span>
+                <span class="travel-review__name">Ashly Fernadez</span>
+                <span class="travel-review__career">- Foreign Traveller -</span>
                 <span class="travel-review__rating--4-star"></span>
-                <p class="travel-review__content">Cras eget mattis neque. Nulla tempus tortor elit, vitae pharetr
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, quia doloribus</p>
+                <p class="travel-review__content">"Thanks to KTAC for their taxi services, supported me with my brocken english for reaching destinations"</p>
             </a>
 
         </div>
