--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <div class="header-4-upper">
         <div class="wand-container">
                 <span class="header-4-upper__contact-area">
-                    <a class="header-4-upper__contact" href="index-4.html#">
+                    <a class="header-4-upper__contact" href="#">
                         <img src="assets/images/mailcontact.png" alt="mailcontact">
                         info@keralatoursandcabs.com
                     </a>
-                    <a class="header-4-upper__contact" href="index-4.html#">
+                    <a class="header-4-upper__contact" href="#">
                         <img src="assets/images/header4phone.png" alt="phone">
-                        8301088305
+                        +91-8301088305
                     </a>
                 </span>
             <span class="header-4-upper__social">
-                    <a href="index-4.html#"><img src="assets/images/header4upperIns.png" alt="header4ins"></a>
-                    <a href="index-4.html#"><img src="assets/images/header4face.png" alt="face"></a>
+                    <a href="#"><img src="assets/images/header4upperIns.png" alt="header4ins"></a>
+                    <a href="#"><img src="assets/images/header4face.png" alt="face"></a>
                 </span>
         </div>
     </div>
@@ -47,13 +47,13 @@
 
             <nav class="header-2-nav">
                     <span class="header-4-upper__contact-area-mobile">
-                        <a class="header-4-upper__contact" href="index-4.html#">
+                        <a class="header-4-upper__contact" href="#">
                             <img src="assets/images/mailcontact.png" alt="mailcontact">
                             info@keralatoursandcabs.com
                         </a>
-                        <a class="header-4-upper__contact" href="index-4.html#">
+                        <a class="header-4-upper__contact" href="#">
                             <img src="assets/images/header4phone.png" alt="phone">
-                            8301088305
+                            +91-8301088305
                         </a>
                     </span>
             </nav>
@@ -292,27 +292,27 @@
             </div>
         </div>
         <div class="type-of-tour">
-            <a href="index.html#" class="type-of-tour__item">
+            <a href="#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-1.png"
                                                           alt="icon5-1"></div>
                 <p>Kerala Wildlife/Tours</p>
             </a>
-            <a href="index-5.html#" class="type-of-tour__item">
+            <a href="#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-2.png"
                                                           alt="icon5-2"></div>
                 <p> Trekking </p>
             </a>
-            <a href="index-5.html#" class="type-of-tour__item">
+            <a href="#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-3.png"
                                                           alt="icon5-3"></div>
                 <p> pilgrimage </p>
             </a>
-            <a href="index-5.html#" class="type-of-tour__item">
+            <a href="#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-4.png"
                                                           alt="icon5-4"></div>
                 <p>Backwaters</p>
             </a>
-            <a href="index-5.html#" class="type-of-tour__item">
+            <a href="#" class="type-of-tour__item">
                 <div class="type-of-tour__item__img"><img src="assets/images/uploads/destination/icon5-5.png"
                                                           alt="icon5-5"></div>
                 <p>Ayurveda/Medical Tourism</p>
@@ -352,7 +352,7 @@
                     <p>Guruvayur, Thrissur</p>
                     <div class="destination-4-2__content__text"> "Abode of lord Krishna Unni kannan(kannaiyyah), this place which called as bhu loka vaikundam. Name literally means, Guru Pavana Puram, Situated in southern part of Thrissur, Kerala"
                     </div>
-                    <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
+                    <a href="#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
                 </div>
             </div>
@@ -365,7 +365,7 @@
                     <div class="destination-4-2__content__text"> This name came from Veer Sabari, from threthayuga. Here dwells the kaliyuga varada(HariHara Putra) as dharma sastha, 
                         a place for all devotees irrespective of religion caste creed.
                     </div>
-                    <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
+                    <a href="#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
                 </div>
             </div>
@@ -379,7 +379,7 @@
                         contains large number of British model cottages due to colonial era influence.
 
                     </div>
-                    <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
+                    <a href="#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
                 </div>
             </div>
@@ -392,7 +392,7 @@
                     <div class="destination-4-2__content__text">Serene, moisty and windy climate, in fact fabulous condition for the famous Alappuzha house boat experience. 
                         Mouth-watering fresh water fish dishes with Kerala spices is a good combination.
                     </div>
-                    <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
+                    <a href="#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
                 </div>
             </div>
@@ -405,7 +405,7 @@
                     <p>Thekkadi, Idukki</p>
                     <div class="destination-4-2__content__text">Periyar wild life sanctuary situated here, where there is a variety of flora and fauna visible. There are wild elephants, deer, bison.  Trekking, boating and jeep safari is possible for tourists.
                     </div>
-                    <a href="index-4.html#"><img src="assets/images/destination/rightArrow.png"
+                    <a href="#"><img src="assets/images/destination/rightArrow.png"
                                                  alt="rightarrow"></a>
                 </div>
             </div>
@@ -480,9 +480,9 @@
         <div class="container qa-travel__center">
             <div class="col-lg-8 qa-travel__question">
 
-                <h6><a class="qa-travel__question__text" href="index-4.html#"> Have Some Question About</a><span>
+                <h6><a class="qa-travel__question__text" href="#"> Have Some Question About</a><span>
                             kerl Tours & Cabs </span>?</h6>
-                <a class="qa-travel__question__btn" href="index-4.html#">let’s talk</a>
+                <a class="qa-travel__question__btn" href="#">let’s talk</a>
 
             </div>
         </div>
@@ -495,19 +495,19 @@
     <div class="container">
         <div class="footer-menu">
             <div class="footer-menu__item">
-                <a href="index-4.html#">Our Fleet</a>
-                <a href="index-4.html#">Types of Tours</a>
-                <a href="index-4.html#">Contact</a>
+                <a href="#">Our Fleet</a>
+                <a href="#">Types of Tours</a>
+                <a href="#">Contact</a>
             </div>
 <!--
 
-            <a href="index-4.html#" class="footer-menu__item"><img class="footer-menu__logo"
+            <a href="#" class="footer-menu__item"><img class="footer-menu__logo"
                                                                    src="assets/images/logo.png" alt="footerlogo"></a>
 -->
 
             <div class="footer-menu__item">
-                <a href="index-4.html#">about</a>
-                <a href="index-4.html#">testimonials</a>
+                <a href="#">about</a>
+                <a href="#">testimonials</a>
             </div>
         </div>
     </div>
