--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div id="filterable-posts" class="row">
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 mpv">
-                <a href="tour-item.html" class="trending-tour-item ">
+                <a href="#" class="trending-tour-item ">
                     <div class="trending-tour-item__sale"></div>
                     <img class="trending-tour-item__thumnail"
                          src="assets/images/uploads/cars/innova-crysta.jpg"
@@ -129,7 +129,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12  sedan">
-                <a href="tour-item-2.html" class="trending-tour-item ">
+                <a href="#" class="trending-tour-item ">
                     <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Dzire.jpg"
                          alt="tour1">
                     <div class="trending-tour-item__info" >
@@ -151,7 +151,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 sedan">
-                <a href="tour-item-3.html" class="trending-tour-item ">
+                <a href="#" class="trending-tour-item ">
                     <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/etios.png"
                          alt="tour1">
                     <div class="trending-tour-item__info">
@@ -172,7 +172,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 mpv">
-                <a href="tour-item.html" class="trending-tour-item ">
+                <a href="#" class="trending-tour-item ">
                     <div class="trending-tour-item__sale"></div>
                     <img class="trending-tour-item__thumnail"
                          src="assets/images/uploads/cars/toyota-innova.jpg"
@@ -197,7 +197,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 traveller">
-                <a href="tour-item.html" class="trending-tour-item ">
+                <a href="#" class="trending-tour-item ">
                     <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/Traveller.jpeg"
                          alt="tour1">
                     <div class="trending-tour-item__info">
@@ -432,7 +432,7 @@
         </div>
         <div id="travel-review-area" class="row">
 
-            <a href="blog-single.html" class="travel-review">
+            <a href="#" class="travel-review">
                 <div class="travel-review__avatar"><img src="" alt="review1">
                 </div>
                 <span class="travel-review__name">Ankur Sharma</span>
@@ -442,7 +442,7 @@
             </a>
 
 
-            <a href="blog-single.html" class="travel-review">
+            <a href="#" class="travel-review">
                 <div class="travel-review__avatar"><img src="" alt="review2">
                 </div>
                 <span class="travel-review__name">Mohan Kumar</span>
@@ -451,7 +451,7 @@
                 <p class="travel-review__content"> "maja aya, so cooperative team, helped us in planning our program with time bound schedules, three days was simply amazing"</p>
             </a>
 
-            <a href="blog-single.html" class="travel-review">
+            <a href="#" class="travel-review">
                 <div class="travel-review__avatar"><img src="" alt="review3">
                 </div>
                 <span class="travel-review__name">Manmeet Singh </span>
@@ -461,7 +461,7 @@
             </a>
 
 
-            <a href="blog-single.html" class="travel-review">
+            <a href="#" class="travel-review">
                 <div class="travel-review__avatar"><img src="" alt="review2">
                 </div>
                 <span class="travel-review__name">Ashly Fernadez</span>
